tweaks to news and docs

--- a/NEWS.html
+++ b/NEWS.html
@@ -359,11 +359,11 @@ Version 1.0.0 contains a collection of basic features that aim to make
 analyzing environmental sampling data easier and more reproducible. The
 functionality we have included to kick off the package includes:</p>
 <ul>
-<li><p>Detailed descriptions of standard data formats for environmental
+<li>Detailed descriptions of standard data formats for environmental
 sampling data and standard curve assays. The functionality of the
-package requires data to follow these formats.</p></li>
-<li><p>Functions for the absolute and relative quantification of qPCR
-data which include:</p>
+package requires data to follow these formats.</li>
+<li>Functions for the absolute and relative quantification of qPCR data
+which include:
 <ul>
 <li>Calculating the number of gene copies using Ct values and a standard
 curve assay</li>
@@ -372,11 +372,11 @@ curve assay</li>
 relative to a reference gene. An efficiency-weighted version is also
 included.</li>
 <li>Estimation of the percentile amplification efficiency using a
-standard curve assay</li>
+standard curve assay.</li>
 </ul></li>
-<li><p>Functions for downloading covariate data from several open-source
+<li>Functions for downloading covariate data from several open-source
 APIs and methods for relating these data to environmental sampling
-observations. These data include:</p>
+observations. These data include:
 <ul>
 <li>Climate
 <ul>
@@ -407,7 +407,7 @@ observations. These data include:</p>
 <li>Place names of sampling sites</li>
 </ul></li>
 </ul></li>
-<li><p>Basic calculation of sample sizes and detection rates</p></li>
+<li>Basic calculation of sample sizes and detection rates</li>
 </ul>
 </div>
 
