--- a/vignettes/amplification_efficiency.html
+++ b/vignettes/amplification_efficiency.html
@@ -367,9 +367,8 @@ qPCR</h1>
 <p>Adjusting qPCR data according based on amplification efficiency is an
 important step for estimating pathogen presence accurately and reliably.
 Amplification efficiency refers to how effectively a PCR reaction
-duplicates the target nucleic acid in each each cycle (see Thermo
-Fisher’s <a href="https://www.thermofisher.com/us/en/home/life-science/pcr/real-time-pcr/real-time-pcr-learning-center/real-time-pcr-basics/efficiency-real-time-pcr-qpcr.html">Efficiency
-of Real-Time PCR</a>). If an efficiency of 100% is reached, then the
+duplicates the target nucleic acid in each cycle (see Thermo Fisher’s <a href="https://www.thermofisher.com/us/en/home/life-science/pcr/real-time-pcr/real-time-pcr-learning-center/real-time-pcr-basics/efficiency-real-time-pcr-qpcr.html">Efficiency
+of Real-Time PCR</a>). If efficiency of 100% is reached, then the
 quantity of the target will double with each cycle. However, variations
 in the PCR reactions due to reagents or template quality can degrade
 efficiency <span class="citation">(<a href="#ref-stolovitzky1996">Stolovitzky and Cecchi 1996</a>)</span>. It
@@ -395,7 +394,7 @@ to get the slope <span class="math inline">\(\beta_{\text{efficiency}}\)</span>:
 <p><span class="math display">\[\text{Ct}_{ij} = \alpha +
 \beta_{\text{efficiency}} \text{log}_2\big(S_{ij}\big) +
 \epsilon.\]</span></p>
-<p>Where, <span class="math inline">\(S_{ij}\)</span> is the serial
+<p>Where <span class="math inline">\(S_{ij}\)</span> is the serially
 diluted concentration of the target nucleic acid for observation <span class="math inline">\(i\)</span> and gene target <span class="math inline">\(j\)</span>, and the percentile amplification
 efficiency is <span class="math inline">\(\phi =
 -\beta_{\text{efficiency}}\)</span>. Assuming that the standard curve
