--- a/vignettes/calc_local_population.html
+++ b/vignettes/calc_local_population.html
@@ -351,16 +351,17 @@ located in densely populated areas or travel hubs.</p>
 <p>To estimate the contributing population for a sampling site, we have
 included two methods:</p>
 <ol style="list-style-type: decimal">
-<li><p>a catchment based method that delineates the upstream drainage
+<li><p>a catchment-based method that delineates the upstream drainage
 catchment for each sampling site and sums the population residing within
 it, and</p></li>
-<li><p>a simple radius method that draws a user defined radius around
+<li><p>a simple radius method that draws a user-defined radius around
 each sampling site and sums the population within it.</p></li>
 </ol>
-<p>These methods are a good starting point, however future research will
-help to identify the best methods for estimating the local population
-contributing to sampling sites. We will add additional functionality to
-the package here based on future needs and research.</p>
+<p>These methods are a good starting point, however, future research
+will help to identify the best methods for estimating the local
+population contributing to sampling sites. We will add additional
+functionality to the package here based on future needs and
+research.</p>
 <p>See below for an example of how to use the <code>es</code> package to
 calculate the local population size for a set of sampling sites using
 the methods stated above.</p>
