updating website pointing to WES

--- a/NEWS.html
+++ b/NEWS.html
@@ -352,8 +352,8 @@ display: none;
 </div>
 
 
-<div id="es-v1.0.0" class="section level1">
-<h1>es v1.0.0</h1>
+<div id="es-v1.0.0-released-june-04-2024-deprecated-july-03-2024" class="section level1">
+<h1>es v1.0.0 released June 04, 2024 (deprecated July 03, 2024)</h1>
 <p>Welcome to the first release of the <code>es</code> R package!
 Version 1.0.0 contains a collection of basic features that aim to make
 analyzing environmental sampling data easier and more reproducible. The
